#367: Resolved Problem Header being too low issue

--- a/src/components/Editor/components/ProblemHeader/styles.css
+++ b/src/components/Editor/components/ProblemHeader/styles.css
@@ -1,14 +1,15 @@
 .title {
     font-size: 1.2em;
     color: rgb(255, 255, 255);
-    margin: 0px;
+    margin-right: 10px;
 }
 
 .header {
     z-index: 1;
-    flex: 0 0 60px;
+    min-height: 60px;
+    align-items: center;
     background-color: rgb(0, 98, 217);
-    padding-top: 10px;
+    padding: 7px;
     display: flex;
 }
 
